# AudioEditor

./: .clang-format  CMakeLists.txt  LICENSE  PKGBUILD  README.md  vcpkg.json
.github/workflows/: ci.yml  release.yml
src/: main.cpp
src/app/: App.cpp  App.hpp  AppState.hpp
src/core/: logger.hpp
src/exceptions/: TagLibException.hpp
src/filters/: FileFilter.cpp  FileFilter.hpp
src/models/: AudioFile.hpp
src/screens/: EditorScreen.cpp  EditorScreen.hpp  FileListScreen.cpp  FileListScreen.hpp
src/services/: FileScanner.cpp  FileScanner.hpp  MetadataService.cpp  MetadataService.hpp
src/utils/: Utils.cpp  Utils.hpp
tests/: test_filter.cpp  test_metadata.cpp  test_scanner.cpp
